# qenex-lab

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  START_OMNI_INTEGRATION.md  TUI_QUICKSTART.md  package.json  qenex.json  sst-env.d.ts  sst.config.ts
.github/workflows/: docs-update.yml  duplicate-issues.yml  duplicate-prs.yml  publish-github-action.yml  publish.yml  qenex-lab.yml  release-github-action.yml  review.yml  stats.yml  test.yml  triage.yml
.opencode/: opencode.jsonc
.opencode/agent/: duplicate-pr.md  qenex-astro.md  qenex-bio.md  qenex-chem.md  qenex-climate.md  qenex-lab.md  qenex-math.md  qenex-neuro.md  qenex-physics.md
.opencode/tool/: github-pr-search.ts
branding/: logo.txt
config/: telemetry.conf
docs/: MCP-CONFIGURATION.md
github/: README.md  action.yml  index.ts  package.json
infra/: console.ts  stage.ts
interface/: README.md  install.sh
interface/backend/: context_bridge.py  expert_system.py  main.py  multi_expert_search.py  pdf_generator.py  reasoning_engine.py  requirements.txt  scout_ffi.py  semantic_cache.py  (+5 more)
publications/: QENEX_LAB_Sovereign_Excellence_Status_Report_20260108_140259.tex
script/: changelog.ts  publish-complete.ts  publish-start.ts  stats.ts  sync-zed.ts
tui/: Cargo.toml  README.md  build.sh  install_rust.sh  qenex-tui  run.sh
tui/src/: main.rs
workspace/: .gitignore  AGENTS.md  AGENT_CONFIG_COMPLETE.md  AGENT_SETUP_VERIFICATION.md  RECOMMENDATIONS.md  cleanup_files.py  debug_kinetic.py  debug_mp.ql  qenex_lab.py  reproduce_jit.py  requirements.txt  research_candidates.py  test_ruthless_suite.py
(+100 files in other folders)
